[workspace]
members = [
    "crates/basecoin",
    "crates/config",
    "crates/helper",
    "crates/store",
    "crates/types",
    # x SDK modules
    "crates/x/auth",
    "crates/x/bank",
    "crates/x/bank/bank-type",
    "crates/x/gov",
    "crates/x/ibc",
    "crates/x/module-api",
    "crates/x/staking",
    "crates/x/upgrade",
]

resolver = "2"

[workspace.dependencies]
clap = { version = "4.3.0" }
cosmrs = "0.14.0"
ibc = { git = "https://github.com/cosmos/ibc-rs.git", rev = "5d1855b2593b1235060b231f2abb4d9407a850cd"}
ibc-proto = { version = "0.32", default-features = false }
ics23 = { version = "0.10.1", default-features = false }
displaydoc = { version = "0.2", default-features = false}
prost = { version = "0.11.6", default-features = false }
serde_json = "1.0"
tendermint = "0.32.0"
tendermint-abci = "0.32.0"
tendermint-proto = "0.32.0"
tendermint-rpc = { version = "0.32.0"  }
tokio = { version = "1.0" }
tonic = "0.9"
tracing = "0.1.26"
sha2 = "0.10.2"
tracing-subscriber = "0.3.16"
anyhow = "1"
thiserror = "1"
derive_more = { version = "0.99.17", default-features = false }
tower-abci = { version = "0.8" }
tower = { version = "0.4" }
regex = "1.4"

subtle-encoding = { version = "0.5", default-features = false }
safe-regex = { version = "0.2.5", default-features = false }
serde = "1"
serde_derive = { version = "1", default-features = false}
toml = "0.7"
primitive-types = { version = "0.12.0", default-features = false }

bytes = "1.0.1"
lazy_static = "1.4.0"
proptest = "*"
rand = "*"
