[package]
name = "basecoin"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
categories = ["cryptography::cryptocurrencies"]
repository = "https://github.com/informalsystems/basecoin-rs"
authors = ["Informal Systems <hello@informal.systems>"]
description = """
    An example Tendermint ABCI application that integrates with ibc-rs, making
    use of tendermint-rs.
"""

[[bin]]
name = "basecoin"
path = "bin/basecoin/main.rs"

[features]
default = []
tower-abci = ["dep:tower-abci", "dep:tower"]

[dependencies]
clap = { workspace = true, features = ["derive", "wrap_help"] }
cosmrs = { workspace = true }
ibc = { workspace = true }
ibc-proto = { workspace = true, default-features = false, features = ["server"] }
prost = { workspace = true, default-features = false }
serde_json = { workspace = true }
tendermint = { workspace = true }
tendermint-abci = { workspace = true }
tendermint-proto = { workspace = true }
tokio = { workspace = true,  features = ["macros", "rt-multi-thread"] }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

tower-abci = { workspace = true, optional = true }
tower = { workspace = true, features = ["full"], optional = true }

cosmos-store = { version = "0.1", path = "../store" }
cosmos-config = { version = "0.1", path = "../config" }
cosmos-helper = { version = "0.1", path = "../helper" }
cosmos-x-auth = { version = "0.1", path = "../x/auth" }
cosmos-x-bank = { version = "0.1", path = "../x/bank" }
cosmos-x-bank-type = { version = "0.1", path = "../x/bank/bank-type" }
cosmos-x-gov = { version = "0.1", path = "../x/gov" }
cosmos-x-ibc = { version = "0.1", path = "../x/ibc" }
cosmos-x-module-api = { version = "0.1", path = "../x/module-api" }
cosmos-x-staking = { version = "0.1", path = "../x/staking" }
cosmos-x-upgrade = { version = "0.1", path = "../x/upgrade" }

[dev-dependencies]
bytes = { workspace = true }
lazy_static = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
