[package]
name = "basecoin"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
categories = ["cryptography::cryptocurrencies"]
repository = "https://github.com/informalsystems/basecoin-rs"
authors = ["Informal Systems <hello@informal.systems>"]
description = """
    An example Tendermint ABCI application that integrates with ibc-rs, making
    use of tendermint-rs.
"""

[[bin]]
name = "basecoin"
path = "bin/basecoin/main.rs"

[features]
default = []
tower-abci = ["dep:tower-abci", "dep:tower"]

[dependencies]
clap = { workspace = true, features = ["derive", "wrap_help"] }
cosmrs = { workspace = true }
ibc = { workspace = true }
ibc-proto = { workspace = true, default-features = false, features = ["server"] }
prost = { workspace = true, default-features = false }
serde_json = { workspace = true }
tendermint = { workspace = true }
tendermint-abci = { workspace = true }
tendermint-proto = { workspace = true }
tokio = { workspace = true,  features = ["macros", "rt-multi-thread"] }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

tower-abci = { workspace = true, optional = true }
tower = { workspace = true, features = ["full"], optional = true }

cosmos-store = { workspace = true }
cosmos-config = { workspace = true }
cosmos-helper = { workspace = true }
cosmos-x-auth = { workspace = true }
cosmos-x-bank = { workspace = true }
cosmos-x-bank-type = { workspace = true }
cosmos-x-gov = { workspace = true }
cosmos-x-ibc = { workspace = true }
cosmos-x-module-api = { workspace = true }
cosmos-x-staking = { workspace = true }
cosmos-x-upgrade = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
lazy_static = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
