[package]
name = "cosmos-sdk-rs-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_derive = { workspace = true, default-features = false }
tendermint-rpc = { workspace = true, features = ["http-client"] }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
