[package]
name = "cosmos-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
thiserror = { workspace = true }
ibc = {  workspace = true  }
tendermint-proto = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
lazy_static = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
