[package]
name = "cosmos-x-bank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmrs = { workspace = true }
ibc-proto = { workspace = true, default-features = false, features = ["server"] }
prost = { workspace = true, default-features = false }
serde_json = { workspace = true }
displaydoc = { workspace = true, default-features = false }
primitive-types = { workspace = true, default-features = false, features = ["serde_no_std"] }
tendermint = { workspace = true }
tendermint-proto = { workspace = true }
tonic = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

cosmos-store = { version = "0.1", path = "../../store" }
cosmos-helper = { version = "0.1", path = "../../helper" }
cosmos-x-module-api = { version = "0.1", path = "../module-api" }
cosmos-x-bank-type = { version = "0.1", path = "./bank-type" }
cosmos-x-auth = { version = "0.1", path = "../auth" }
