[package]
name = "cosmos-x-gov"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmrs = { workspace = true }
derive_more = { workspace = true, default-features = false, features = ["from", "into", "display"] }
ibc = { workspace = true }
ibc-proto = { workspace = true, default-features = false, features = ["server"] }
tendermint = { workspace = true}
tendermint-proto = { workspace = true }
tonic = { workspace = true }
anyhow = { workspace = true}
tracing = { workspace = true}
thiserror = { workspace = true }

cosmos-store = { workspace = true }
cosmos-helper = { workspace = true }
cosmos-x-module-api = {workspace = true }
cosmos-x-bank-type = { workspace = true}
cosmos-x-upgrade = { workspace = true }
