[package]
name = "cosmos-x-module-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tendermint = { workspace = true}
tendermint-proto = { workspace = true }
ibc-proto = { workspace = true , default-features = false, features = ["server"] }
cosmrs = { workspace = true }
serde_json = { workspace = true }
cosmos-helper = { workspace = true }
cosmos-store = { workspace = true }
